Removed spurious empty first lines in grid.c

--- a/mds/notebook/git.ipynb
+++ b/mds/notebook/git.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:a5eb68ef1f7934c75123d6df77f1a7cb8f96b3e278b8efab2a30c44a79b0acaa"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -42,7 +43,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/home/training/tmp/mds/git\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -56,7 +66,20 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Initialized empty Git repository in /home/training/tmp/mds/git/example/.git/\n",
+        "total 12\n",
+        "drwxrwxr-x 3 training training 4096 Nov  4 15:34 .\n",
+        "drwxrwxr-x 3 training training 4096 Nov  4 15:34 ..\n",
+        "drwxrwxr-x 7 training training 4096 Nov  4 15:34 .git\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -67,7 +90,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/home/training/tmp/mds/git/example\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
