--- a/training/notebook/build.ipynb
+++ b/training/notebook/build.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0168871e78a7be748be7b22eb8c96a4554fa7fe914b95476371d0e48c555b019"
+  "signature": "sha256:ad6e538d71793990b218c8cda28ab12878c4901f97451f8e8e77147a63362283"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2339,20 +2339,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Source file\n",
-      "gtk_example.c\n",
-      "\n",
-      "Preprocessing, Compilation, Assembling\n",
-      "gcc -c -o gtk_example.o gtk_example.c `pkg-config --cflags gtk+-2.0`\n",
-      "\n",
-      "Object file\n",
-      "gtk_example.o\n",
-      "\n",
-      "Linking\n",
-      "gcc -o gtk_example gtk_example.o `pkg-config --libs gtk+-2.0`\n",
-      "\n",
-      "Executable\n",
-      "gtk_example"
+      "![Building chain](build/compilation_chain.png)"
      ]
     },
     {
@@ -2366,7 +2353,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Note.** There exists some specific cases where some cycles naturally appear in a compilation process.  These cases are known as \u201cbootstrapping\u201d, where a project develops a tool that is used to build the tool itself.  Typically, C compilers are now usually written in C (or C++), and we need a C compiler to compile them (and a compiler developper often wants to compile her compiler by using her own compiler).  In that cases, the cyclicity should be broken by adding a \u201cbootstrap\u201d step that provides a seed (for example, a compiler already compiled) to initiate the building process.  There will then appear a meta-graph of dependencies between builds, where the arrows that involve the tool for their transformations will rely on the results of the previous build."
+      "**Note.** There exist some specific cases where some cycles naturally appear in a compilation process.  These cases are known as \u201cbootstrapping\u201d, where a project develops a tool that is used to build the tool itself.  Typically, C compilers are now usually written in C (or C++), and we need a C compiler to compile them (and a compiler developper often wants to compile her compiler by using her own compiler).  In that cases, the cyclicity should be broken by adding a \u201cbootstrap\u201d step that provides a seed (for example, a compiler already compiled) to initiate the building process.  There will then appear a meta-graph of dependencies between builds, where the arrows that involve the tool for their transformations will rely on the results of the previous build."
      ]
     },
     {
