--- a/training/notebook/build.ipynb
+++ b/training/notebook/build.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ad6e538d71793990b218c8cda28ab12878c4901f97451f8e8e77147a63362283"
+  "signature": "sha256:c6aff22766c1516583bd3d096e59e0c70c7ee0d36cacf63de327f8b07030bf0a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2426,32 +2426,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Header file\n",
-      "initialization.h\n",
-      "\n",
-      "Source file\n",
-      "gtk_example.c\n",
-      "\n",
-      "Preprocessing, Compilation, Assembling\n",
-      "gcc -c -o gtk_example.o gtk_example.c\n",
-      "\n",
-      "Object file\n",
-      "gtk_example.o\n",
-      "\n",
-      "Source file\n",
-      "initialization.c\n",
-      "\n",
-      "Preprocessing, Compilation, Assembling\n",
-      "gcc -c -o initialization.o initialization.c `pkg-config --cflags gtk+-2.0`\n",
-      "\n",
-      "Object file\n",
-      "initialization.o\n",
-      "\n",
-      "Linking\n",
-      "gcc -o gtk_example gtk_example.o initialization.o `pkg-config --libs gtk+-2.0`\n",
-      "\n",
-      "Executable\n",
-      "gtk_example"
+      "![Compilation graph](build/compilation_graph.png)"
      ]
     },
     {
@@ -2703,6 +2678,78 @@
      "metadata": {},
      "source": [
       "Note that we declared `gtk_example_lib` in the list of libraries that `gtk_example` has to be linked to.  On the other hand, `${GTK2_LIBRARIES}` is linked to `gtk_example_lib`."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Annex: additional features for Makefiles"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "\n",
+      "cat >Makefile <<EOF\n",
+      "SOURCES=gtk_example.c initialization.c\n",
+      "CFLAGS=\\$(shell pkg-config --cflags gtk+-2.0)\n",
+      "LDLIBS=\\$(shell pkg-config --libs gtk+-2.0)\n",
+      "    \n",
+      "all: gtk_example\n",
+      "    \n",
+      "clean:\n",
+      "\trm -f gtk_example \\$(SOURCES:.c=.o)\n",
+      "    \n",
+      "gtk_example: \\$(SOURCES:.c=.o)\n",
+      "EOF"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "make"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "cc -pthread -I/usr/include/gtk-2.0 -I/usr/lib/x86_64-linux-gnu/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12     -c -o gtk_example.o gtk_example.c\n",
+        "cc -pthread -I/usr/include/gtk-2.0 -I/usr/lib/x86_64-linux-gnu/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12     -c -o initialization.o initialization.c\n",
+        "cc   gtk_example.o initialization.o  -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangoft2-1.0 -lpangocairo-1.0 -lgdk_pixbuf-2.0 -lcairo -lpango-1.0 -lfreetype -lfontconfig -lgobject-2.0 -lglib-2.0   -o gtk_example\n"
+       ]
+      }
+     ],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In a `Makefile`, the pseudo-variable `$(shell `some commands`)` is expanded to the output of that shell command: the variables `$(CFLAGS)` and `$(LDLIBS)` are therefore bound to the arguments provided by `pkg-config` to compile and link the sources properly with the GTK library.\n",
+      "\n",
+      "In a `Makefile`, the expansion of `$(`variable`:`old suffix`=`new suffix`)` replaces in every word of `$(`variable`)` the old suffix by the new suffix: therefore, `$(SOURCES:.c=.o)` will be expanded into `tetris.o`, `grid.o`, `window.o`.\n",
+      "\n",
+      "`make` defines implicit rules to compile and link C programs.\n",
+      "\n",
+      "    %.o: %.c\n",
+      "    \t$(CC) -o $@ -c $(CPPFLAGS) $(CFLAGS) $<\n",
+      "\n",
+      "`%` introduces patterns for generic rules, `$<` refers to the input files of the rule, `$@` to the target file.\n",
+      "\n",
+      "And single objects like `tetris` are implicitly built with `$(CC) $(LDFLAGS) -o $@ $< $(LOADLIBS) $(LDLIBS)`."
      ]
     }
    ],
