--- a/training/notebook/tutorials/1-GitHub_CMake.ipynb
+++ b/training/notebook/tutorials/1-GitHub_CMake.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0b4d3244bcf0dcd55bb9a0b8704837e093d867e7efe9c196be0cb53637ecbd18"
+  "signature": "sha256:5a2ccca88d246f564e9122b3b8a6c1b2832abae476b9a04ef9f2633cd17f25d0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,8 +12,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "TP #1: GitHub and CMake\n",
-      "=======================\n",
+      "Tutorial #1: GitHub and CMake\n",
+      "=============================\n",
       "\n",
       "- Create a GitHub account.\n",
       "- Clone the repository: https://github.com/thierry-martinez/2014-11-mds/\n",
