Move files to section directories

--- a/training/notebook/tracker/tracker.ipynb
+++ b/training/notebook/tracker/tracker.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:01835f41893b029c90386c27ebdfb2bb3a6f725256d2a0f7d40895d185d2f638"
+  "signature": "sha256:93dff4477cfdf13cddc2b45ab21a056e4f82a2728424f797c886ce81c5062b5d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,7 +43,7 @@
       "The GitHub issue tracker\n",
       "------------------------\n",
       "\n",
-      "![Issue link](tracking/link.png)\n",
+      "<img name=\"Issue link\" src=\"images/link.png\">\n",
       "\n",
       "We will use the issue tracker hosted in GitHub.\n",
       "\n",
@@ -93,6 +93,14 @@
       "\n",
       "Pull requests can be associated to issues."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
